<resources>

    <string name="app_name">ApplicationWeatherV1</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="city_example">Нальчик</string>
    <string name="temperature_example">+15</string>
    <string name="feels_like_label">"Ощущается как:  "</string>
    <string name="feels_like_example">+13</string>
    <string name="title_main">Главный</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_settings">Настройки</string>
    <string name="user_name">Имя пользователя: No name</string>
    <string name="add_greeting">Добавить приветствие</string>
    <string name="main_place">Место на главном экране</string>
    <string name="about">О приложении</string>
    <string name="wind_units">" м/с,  "</string>
    <string name="degree"> ° </string>
    <string name="percent"> % </string>
    <string name="system_message">Сообщение от системы</string>
    <string name="action">"Действие: "</string>
    <string name="greeting">Привет, друг</string>
    <string name="title_history">История</string>

</resources>